MySQL Connector/Python 8.0 - Release Notes & Changes
====================================================

MySQL Connector/Python
Copyright (c) 2009, 2023, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.1.0
======

- WL#15630: Remove Python 3.7 support
- WL#15591: Improve the network module
- BUG#35338384: PIP installs incompatible Connector/Python packages
- BUG#35318413: Fix charset mapping for MySQL 8.1.0
- BUG#35212199: Check for identifier quotes in the database name

v8.0.33
=======

- WL#15528: Add docker build/test support for existing server
- WL#15483: Support OCI ephemeral key-based authentication
- WL#15435: Improve the logging system
- WL#15401: Support for type hints in module mysqlx
- BUG#35233031: Connector/Python should not default to mysql_native_password
- BUG#35015758: COM_QUIT should not be called in the connection phase
- BUG#34984850: Fix binary conversion with NO_BACKSLASH_ESCAPES mode
- BUG#31355895: Fix slow executemany() with insert statements
- BUG#30103652: Connector/Python ClientFlag SESION_TRACK is a misspelling
- BUG#27489972: Several COM_% commands have been deprecated
- BUG#27359063: Support for dictionary, named_tuple, and raw to prepared statements cursor
- BUG#21476351: Too small chunks when sending huge parameters with COM_STMT_SEND_LONG_DATA

v8.0.32
=======

- WL#15348: Support MIT Kerberos library on Windows
- WL#15036: Support for type hints
- WL#14861: Remove distutils support
- BUG#34773422: Connector/Python 8.0.31 installation fails if Python version is 3.11.0
- BUG#34727432: Fix Django datetime error when USE_TZ=True in settings
- BUG#34710366: Django implementation does not pass unit tests
- BUG#34695103: Remove debug messages that shows authentication data
- BUG#34690501: Connector/Python depends on outdated protobuf
- BUG#34689812: Fix datetime conversion when using prepared cursors